add download-upload buttons

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -210,6 +210,12 @@
             <div class="col save_current_comment_to_DB" style="padding-top: 50px;">
                 <button class="small_green_button">Сохранить</button>
             </div>
+            <div class="col export_DB">
+                <button class="small_green_button">Экспорт</button>
+            </div>
+            <div class="col import_DB">
+                <button class="small_green_button">Импорт</button>
+            </div>
         </div>
     </div>
 </div>
