--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -141,6 +141,10 @@
                         <option value="13">13(Деплой-1)</option>
                         <option value="14">14(Деплой-2)</option>
                         <option value="15">15(Диплом)</option>
+                        <option value="16">2(new Джанго 1)</option>
+                        <option value="17">3(new Джанго 2)</option>
+                        <option value="18">4(new Джанго 3)</option>
+                        <option value="19">5(new Джанго 4)</option>
                     </select>
                   </label>
             </form>
