feat: add sprint 16 from python+

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -201,6 +201,7 @@
                         <option value="17">3(new Джанго 2)</option>
                         <option value="18">4(new Джанго 3)</option>
                         <option value="19">5(new Джанго 4)</option>
+                        <option value="20">16+(Парсинг)</option>
                     </select>
                   </label>
                   <br>
