chore: add new lessons

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -146,6 +146,8 @@
                         <option value="18">4(new Джанго 3)</option>
                         <option value="19">5(new Джанго 4)</option>
                         <option value="20">16+(Парсинг)</option>
+                        <option value="21">17+(Парсинг 2)</option>
+                        <option value="22">18+(Flask - URL)</option>
                     </select>
                   </label>
             </form>
@@ -203,6 +205,8 @@
                         <option value="18">4(new Джанго 3)</option>
                         <option value="19">5(new Джанго 4)</option>
                         <option value="20">16+(Парсинг)</option>
+                        <option value="21">17+(Парсинг 2)</option>
+                        <option value="22">18+(Flask - URL)</option>
                     </select>
                   </label>
                   <br>
