chore: add 19 sprint

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -148,6 +148,7 @@
                         <option value="20">16+(Парсинг)</option>
                         <option value="21">17+(Парсинг 2)</option>
                         <option value="22">18+(Flask - URL)</option>
+                        <option value="23">19+(FastAPI - QRKot 1)</option>
                     </select>
                   </label>
             </form>
@@ -207,6 +208,7 @@
                         <option value="20">16+(Парсинг)</option>
                         <option value="21">17+(Парсинг 2)</option>
                         <option value="22">18+(Flask - URL)</option>
+                        <option value="23">19+(FastAPI - QRKot 1)</option>
                     </select>
                   </label>
                   <br>
