chore: add 20 sprint

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -149,6 +149,7 @@
                         <option value="21">17+(Парсинг 2)</option>
                         <option value="22">18+(Flask - URL)</option>
                         <option value="23">19+(FastAPI - QRKot 1)</option>
+                        <option value="24">20+(FastAPI - QRKot 2 Final)</option>
                     </select>
                   </label>
             </form>
@@ -209,6 +210,7 @@
                         <option value="21">17+(Парсинг 2)</option>
                         <option value="22">18+(Flask - URL)</option>
                         <option value="23">19+(FastAPI - QRKot 1)</option>
+                        <option value="24">20+(FastAPI - QRKot 2 Final)</option>
                     </select>
                   </label>
                   <br>
