chore: add 1+ sprint

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -150,6 +150,7 @@
                         <option value="22">18+(Flask - URL)</option>
                         <option value="23">19+(FastAPI - QRKot 1)</option>
                         <option value="24">20+(FastAPI - QRKot 2 Final)</option>
+                        <option value="25">1(new Змейка)</option>
                     </select>
                   </label>
             </form>
@@ -211,6 +212,7 @@
                         <option value="22">18+(Flask - URL)</option>
                         <option value="23">19+(FastAPI - QRKot 1)</option>
                         <option value="24">20+(FastAPI - QRKot 2 Final)</option>
+                        <option value="25">1(new Змейка)</option>
                     </select>
                   </label>
                   <br>
