chore: add 2+ sprint

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -151,6 +151,7 @@
                         <option value="23">19+(FastAPI - QRKot 1)</option>
                         <option value="24">20+(FastAPI - QRKot 2 Final)</option>
                         <option value="25">1(new Змейка)</option>
+                        <option value="26">2(new Алго(поиск))</option>
                     </select>
                   </label>
             </form>
@@ -213,6 +214,7 @@
                         <option value="23">19+(FastAPI - QRKot 1)</option>
                         <option value="24">20+(FastAPI - QRKot 2 Final)</option>
                         <option value="25">1(new Змейка)</option>
+                        <option value="26">2(new Алго(поиск))</option>
                     </select>
                   </label>
                   <br>
