chore: add 3+ sprint

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -152,6 +152,7 @@
                         <option value="24">20+(FastAPI - QRKot 2 Final)</option>
                         <option value="25">1(new Змейка)</option>
                         <option value="26">2(new Алго(поиск))</option>
+                        <option value="27">3(new Алго(шифр))</option>
                     </select>
                   </label>
             </form>
@@ -215,6 +216,7 @@
                         <option value="24">20+(FastAPI - QRKot 2 Final)</option>
                         <option value="25">1(new Змейка)</option>
                         <option value="26">2(new Алго(поиск))</option>
+                        <option value="27">3(new Алго(шифр))</option>
                     </select>
                   </label>
                   <br>
