feat: use Dexie DB instead of deprecated one

--- a/add_edit_comment_window.html
+++ b/add_edit_comment_window.html
@@ -126,6 +126,7 @@
                 <label>Спринт №
                     <select name="sprints" class="sprint_to_search">
                         <option value="0">Все комментарии</option>
+                        <option value="28">-1 Фудграм Уни</option>
                         <option value="1">1(ООП)</option>
                         <option value="2">2(Джанга, старт)</option>
                         <option value="3">3(Формы)</option>
@@ -190,6 +191,7 @@
                 <label>Спринт №
                     <select name="sprints" class="sprint_select_add_comment" style="width: 165px;">
                         <option value="0">Общий коммент</option>
+                        <option value="28">-1 Фудграм Уни</option>
                         <option value="1">1(ООП)</option>
                         <option value="2">2(Джанга, старт)</option>
                         <option value="3">3(Формы)</option>
